# pywinui

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: async_file_read.py  counter.py
src/pywinui/: __init__.py
tests/: test_pywinui.py
